--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "cd build && npm install && cd ../frontend && npm install && npm run build",
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
